# iati-account-web

./: .env.example  .env.test  .gitignore  CHANGELOG.md  Licence.json  README.md  audit_log_viewer.py  docker-compose.yaml  manage.py  mockoon-discoverable-orgs.json  pyproject.toml  requirements.txt  requirements_dev.txt  runserver.sh
.github/workflows/: static-analysis.yaml  unit-testing.yaml
iati_account_web/: admin.py  asgi.py  audit_log_formatter.py  auth.py  constants.py  context_processors.py  crm.py  exceptions.py  exceptions_middleware.py  helpers.py  identity.py  metrics.py  oidc.py  settings.py  tests.py  urls.py  views.py  wsgi.py
iati_account_web/account/: apps.py  forms.py  models.py  urls.py  views.py
iati_account_web/account/migrations/: 0001_initial.py  0002_iatiuser_registry_id.py  0003_iatiuser_has_been_provisioned.py  0004_iatiuser_use_cases_using_data.py  0005_iatiuser_is_iati_superadmin.py  0006_iatiuser_use_cases_forum.py
iati_account_web/data/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
iati_account_web/oidc/: backend.py  discovery.py  utils.py
iati_account_web/ryd_handling/: __init__.py  pagination.py  reporting_orgs.py  session.py
iati_account_web/static/: iati-account.css
iati_account_web/static/js/: account.js
iati_account_web/superadmin/: apps.py  tests.py  urls.py  views.py
iati_account_web/templates/: base.html  index.html  provisioning_error.html
iati_account_web/templates/components/: language_switcher.html  message_viewer.html
iati_account_web/templates/errors/: 404.html  internal.html  permission_denied.html  (+1 more)
iati_account_web/templatetags/: filters.py
iati_account_web/tests/: iati_mock.py  test_encrypted_log_formatter.py  test_exception_handler.py  test_oidc.py  test_ryd_handling.py  test_user_model.py
iati_account_web/welcome/: apps.py  urls.py  views.py
(+22 files in other folders)
